--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-server-express": "^2.19.1",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "if-env": "^1.0.4"
   },
   "bugs": {
